# labs

./: README.md  main.cpp
laba1/: Budget.cpp  CMakeLists.txt  DatabaseService.cpp  DatabaseService.h  ExpenseRecord.h  FinanceApp.h  FinanceClass.cpp  FinanceRecord.cpp  FinanceService.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Records.db  ReportService.cpp  main  main.cpp
laba1/headers/: ActionHandler.h  ActionManager.h  Budget.h  CustomException.h  DatabaseService.h  ExpenseRecord.h  FinanceEntry.h  FinanceRecord.h  FinanceService.h  IncomeRecord.h  MainWindow.h  Stack.h  StackIterator.h  reportservice.h
